      were ghosts in the revision ancestry. (John Arbash Meinel, #209948)

  DOCUMENTATION:

    * Document outlining strategies for TortoiseBzr. (Mark Hammond)

  TESTING:

    * Add ``thread_name_suffix`` parameter to SmartTCPServer_for_testing, to
      make it easy to identify which test spawned a thread with an unhandled
      exception. (Andrew Bennetts)

    * The test suite modules have been modified to define load_tests() instead
      of test_suite(). That speeds up selective loading (via --load-list)
      significantly and provides many examples on how to migrate (grep for
      load_tests).  (Vincent Ladeuil)

  INTERNALS:

    * Implement xml8 serializer.  (Aaron Bentley)

  API BREAKS:

    * Repository.get_data_stream, Repository.get_data_stream_for_search(),
      Repository.get_deltas_for_revsions(), Repository.revision_trees(),
      Repository.item_keys_introduced_by() no longer take read locks.
      (Aaron Bentley)


bzr 1.4rc2 2008-04-21
---------------------

  BUG FIXES:

    * ``bzr log -r ..X bzr://`` was failing, because it was getting a request
      for ``revision_id=None`` which was not a string.
      (John Arbash Meinel, #211661)

    * Fixed a bug in handling ghost revisions when logging changes in a 
      particular file.  (John Arbash Meinel, #209948)

    * Fix error about "attempt to add line-delta in non-delta knit".
      (Andrew Bennetts, #205156)

    * Fixed performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph
      walk iteration fixed by using the Repository.get_graph API.  There was
      another regression in knit => knit fetching which re-read the index for
      every revision each side had in common.
      (Robert Collins, John Arbash Meinel)


bzr 1.4rc1 2008-04-11
---------------------



bzr 1.4rc1 2008-04-11
---------------------

   * bzr main script cannot be imported (Benjamin Peterson)
